pathfinder/compiler/semantics/tests/recursion/Tests/recursion4.stable.err
stderr of test 'recursion4` in directory 'compiler/semantics/tests/recursion` itself:


# 18:07:15 >  
# 18:07:15 >  Mtimeout -timeout 60 ./recursion4 recursion4 
# 18:07:15 >  

type error: element foo { item* }* is not a subtype of element foo { item* }
# halted in typecheck.brg (reduce), line 746

# 18:07:15 >  
# 18:07:15 >  Done.
# 18:07:15 >  

