pathfinder/compiler/semantics/tests/recursion/Tests/recursion4.xq
(: Recursion is a Pathfinder extension :)

(: Recursion expressions must allow more than one item
   (quantifiers + or *) as a type for $v :)
with $v as element(foo) seeded by doc("foo")/foo recurse $v/foo
